Parsing raw lines

--- a/AT_Command_Parser.project
+++ b/AT_Command_Parser.project
@@ -94,5 +94,8 @@
     <File Name="main.c"/>
     <File Name="at_parser.c"/>
     <File Name="at_parser.h"/>
+    <File Name="my_string.c"/>
+    <File Name="my_string.h"/>
+    <File Name="types.h"/>
   </VirtualDirectory>
 </CodeLite_Project>
